# sanyi0411

./: .gitignore  README.md
OpenCV/practice/Calculate_skew_and_deskew/: main.cpp
OpenCV/practice/Change_picture_brightness/: practice.cpp
OpenCV/practice/Change_video_brightness/: practice.cpp
OpenCV/practice/Color_detection(webcam)/: main.v1.cpp  main.v2.cpp
OpenCV/practice/Command_line_parser/: main.cpp
OpenCV/practice/Create_window_with_given_color/: test1.cpp
OpenCV/practice/Decolor_image/: decolor.cpp
OpenCV/practice/Detect_circles(or_other_shapes)/: main.cpp
OpenCV/practice/Detect_circles_live/: main.cpp
OpenCV/practice/Detect_text/: detectTextOnPicture.cpp  detectTextOnWebcam.cpp
OpenCV/practice/Gaussian_blur/: gaussian_blur_video.cpp
OpenCV/practice/Histogram_equalization/: color.cpp  grayscale.cpp
OpenCV/practice/Homogeneous_blur/: blur_image.cpp
OpenCV/practice/Initialize_Mat_with_given_values/: main.cpp
OpenCV/practice/Make_border_to_an_image/: main.cpp
Sorting_algorithms/: bubblesort.cpp  insertionSort.cpp  mergeSort.cpp  selectionSort.cpp  shellSort.cpp
project_phase/0.week_project/: test1.cpp  test2.cpp
week-01/day-2/: hello.html  index.html  test.txt  text.txt
week-01/day-5/: Lightning talk.pptx
week-04/day-2/1. Instruments to Stringed Instruments/: BassGuitar.cpp  CMakeLists.txt  ElectricGuitar.cpp
week-05/Wanderer/: CMakeLists.txt  Character.cpp  Character.h  Enemy.cpp  Enemy.h  Floor.cpp  Floor.h  Hero.cpp  Hero.h  Images.cpp  Images.h  LTexture.cpp  LTexture.h  Movement.cpp  Movement.h  loadImages.cpp  main.cpp
(+563 files in other folders)
